@@ -2,6 +2,14 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*aptana-studio-bin-3.0.4-r2 (22 Aug 2011)
+
+  22 Aug 2011; Denis Misiurca <infoman1985@gmail.com>
+  -aptana-studio-bin-3.0.4.ebuild, -aptana-studio-bin-3.0.4-r1.ebuild,
+  +aptana-studio-bin-3.0.4-r2.ebuild:
+  Updated dependencies
+  One more icon correction
+
 *aptana-studio-bin-3.0.4-r1 (21 Aug 2011)
 
   21 Aug 2011; Denis Misiurca <infoman1985@gmail.com>
